--- a/src/App.css
+++ b/src/App.css
@@ -4,36 +4,59 @@
 }
 
 body {
-    background-color: #222;
+    background-color: #333;
+    overflow: hidden;
 }
 
 .server-btn-div {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    width: 4rem;
-    height: 100vh;
+    width: 4.8rem;
+    height: 100%;
     padding-top: 0.8rem;
-    padding-left: 0.8rem;
-    background-color: #333;
+    /* padding-left: 0.8rem; */
+    background-color: #222;
 }
 .server-btn-sep {
-    width: 3rem;
-    height: 10%;
-    border-radius: 50%;
-    background-color: #777;
-    margin-bottom: 1rem;
-    margin-top: 0.5rem;
+    width: 2rem;
+    height: 15%;
+    background-color: #444;
+    margin-bottom: 0.75rem;
+    margin-top: 0.25rem;
+    margin-left: 1.3rem;
 }
 .server-btn-icon {
+    margin-left: 0.8rem;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     transition: 0.2s;
 }
 .server-btn-icon:hover {
-    border-radius: 35%;
+    border-radius: 30%;
     cursor: pointer;
 }
 .server-btn-icon-active {
-    border-radius: 35%;
+    border-radius: 30%;
+}
+.server-btn-ind-full {
+    position: absolute;
+    margin-top: 5px;
+    height: 40px;
+    width: 0.3rem;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #FFF;
+}
+.server-btn-ind-semi {
+    position: absolute;
+    margin-top: 15px;
+    height: 20px;
+    width: 0.3rem;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #FFF;
 }
