--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
     overflow: hidden;
 }
 
-.server-btn-div {
+#server-btn-div {
     position: absolute;
     top: 0;
     left: 0;
@@ -17,8 +17,25 @@ body {
     width: 4.8rem;
     height: 100%;
     padding-top: 0.8rem;
-    /* padding-left: 0.8rem; */
     background-color: #222;
+}
+.server-btn-ind-semi {
+    position: absolute;
+    margin-top: 15px;
+    height: 20px;
+    width: 0.3rem;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #FFF;
+}
+.server-btn-ind-full {
+    position: absolute;
+    margin-top: 5px;
+    height: 40px;
+    width: 0.3rem;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #FFF;
 }
 .server-btn-sep {
     width: 2rem;
@@ -29,6 +46,7 @@ body {
     margin-left: 1.3rem;
 }
 .server-btn-icon {
+    position: relative;
     margin-left: 0.8rem;
     width: 50px;
     height: 50px;
@@ -41,22 +59,4 @@ body {
 }
 .server-btn-icon-active {
     border-radius: 30%;
-}
-.server-btn-ind-full {
-    position: absolute;
-    margin-top: 5px;
-    height: 40px;
-    width: 0.3rem;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    background-color: #FFF;
-}
-.server-btn-ind-semi {
-    position: absolute;
-    margin-top: 15px;
-    height: 20px;
-    width: 0.3rem;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    background-color: #FFF;
 }
